output/dev/llvm/geq.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/geq.llvm:7:13: error: '@print_int' defined with type 'void (i1)*'
  call void @print_int(i32 1)
            ^
